# devbox-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Release.toml  build.rs  install.ps1  install.sh
.github/workflows/: ci.yaml  coverage.yaml  release.yaml
src/: cli.rs  lib.rs  main.rs  utils.rs
src/commands/: hangman.rs  ip.rs  mod.rs  now.rs  pigsay.rs
src/commands/b64/: decode.rs  encode.rs
tests/: cli_tests.rs
