[package]
name = "devbox"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
local-ip-address = "0.5"
clap_complete = "4.5.55"
base64 = "0.22.1"
serde_json = "1.0.141"
predicates = "3.1.3"
assert_cmd = "2.0.17"
