[package]
name = "devbox"
version = "0.4.0"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
local-ip-address = "0.5"
clap_complete = "4.5.55"
base64 = "0.22.1"
serde_json = "1.0.141"
predicates = "3.1.3"
assert_cmd = "2.0.17"
chrono = "0.4.41"
chrono-tz = { version="0.10.4", features = ["case-insensitive"] }
textwrap = {version="0.16",features = ["smawk"]}

[dev-dependencies]
cargo-tarpaulin = "0.32.8"

[build-dependencies]
clap = { version = "4.5.41", features = ["derive"] }
clap_mangen = "0.2.28"
clap_complete = "4.5.55"

[package.metadata.release]
# sign the commit and the tag
sign-commit = true
sign-tag = true
publish = false
